--- a/src/components/template.html
+++ b/src/components/template.html
@@ -1,26 +1,9 @@
-<div class="hello">
+<div class="hello" xmlns:v-on="http://www.w3.org/1999/xhtml">
     <h1>{{ msg }}</h1>
-    <h2>Essential Links</h2>
-    <ul>
-        <li><a href="https://vuejs.org" target="_blank">Core Docs</a></li>
-        <li><a href="https://forum.vuejs.org" target="_blank">Forum</a></li>
-        <li><a href="https://gitter.im/vuejs/vue" target="_blank">Gitter Chat</a></li>
-        <li><a href="https://twitter.com/vuejs" target="_blank">Twitter</a></li>
-        <br>
-        <li><a href="http://vuejs-templates.github.io/webpack/" target="_blank">Docs for This Template</a></li>
-    </ul>
-    <h2>Ecosystem</h2>
-    <ul>
-        <li><a href="http://router.vuejs.org/" target="_blank">vue-router</a></li>
-        <li><a href="http://vuex.vuejs.org/" target="_blank">vuex</a></li>
-        <li><a href="http://vue-loader.vuejs.org/" target="_blank">vue-loader</a></li>
-        <li><a href="https://github.com/vuejs/awesome-vue" target="_blank">awesome-vue</a></li>
-    </ul>
-
-    <fm-list v-bind:list-items="todos"></fm-list>
+    <!--fm-list v-bind:list-items="todos"></fm-list>
 
     <button v-on:click="fetchItem">Greet</button>
 
-    <input type='file' accept='image/*' v-on:change="openFile"><br>
+    <input type='file' accept='image/*' v-on:change="openFile"><br-->
 
 </div>
