--- a/src/components/fm-container/template.html
+++ b/src/components/fm-container/template.html
@@ -1,10 +1,10 @@
 <div class="fm-container" xmlns:v-on="http://www.w3.org/1999/xhtml">
-    <h1> FM - Container </h1>
+    <h1> {{ title | label('fmContainer') }} </h1>
     <!--fm-list v-bind:list-items="todos"></fm-list>
 
     <button v-on:click="fetchItem">Greet</button>
 
-    <input type='file' accept='image/*' v-on:change="openFile"><br-->
+    <br-->
 
     <fm-loading v-if="loading"></fm-loading>
 
@@ -19,5 +19,7 @@
     <fm-list v-if="!loading && !error && filesList.length > 0" v-bind:items="filesList">
 
     </fm-list>
+
+    <input type='file' accept='image/*' v-on:change="openFile">
 
 </div>
