--- a/src/components/fm-list/template.html
+++ b/src/components/fm-list/template.html
@@ -1,15 +1,30 @@
 <div id="fm-list-id" class="fm-list-class">
 
-    <span v-for="(value, key) in items[0]">
-        {{key}}
-    </span>
-
-    <div v-for="item in items">
-        <span v-for="(value, key) in item">
-            {{ value }}
+    <!--div class="fm-list-header">
+        <span v-for="(value, key) in items[0]">
+            {{key}}
         </span>
     </div>
 
+    <div v-for="item in items" class="fm-list-body">
+        <span v-for="(value, key) in item">
+            {{ value }}
+        </span>
+    </div-->
+
+    <table>
+        <tr>
+            <th v-for="(value, key) in items[0]">
+                {{ key | label('fmList')}}
+            </th>
+        </tr>
+
+        <tr v-for="item in items" class="fm-list-body">
+            <td v-for="(value, key) in item">
+                {{ value }}
+            </td>
+        </tr>
+    </table>
 
 
 </div>
