Add post functionality

--- a/src/components/fm-container/template.html
+++ b/src/components/fm-container/template.html
@@ -1,4 +1,4 @@
-<div class="fm-container" xmlns:v-on="http://www.w3.org/1999/xhtml">
+<div id="fm-container" class="fm-container" xmlns:v-on="http://www.w3.org/1999/xhtml">
     <h1> {{ title | label('fmContainer') }} </h1>
     <!--fm-list v-bind:list-items="todos"></fm-list>
 
