--- a/src/components/fm-list/template.html
+++ b/src/components/fm-list/template.html
@@ -1,4 +1,5 @@
-<div id="fm-list-id" class="fm-list-class">
+<div id="fm-list-id" class="fm-list-class" xmlns:v-on="http://www.w3.org/1999/xhtml"
+     xmlns:v-bind="http://www.w3.org/1999/xhtml">
 
     <!--div class="fm-list-header">
         <span v-for="(value, key) in items[0]">
@@ -17,11 +18,17 @@
             <th v-for="(value, key) in items[0]">
                 {{ key | label('fmList')}}
             </th>
+
+            <th> Delete </th>
         </tr>
 
         <tr v-for="item in items" class="fm-list-body">
             <td v-for="(value, key) in item">
                 {{ value }}
+            </td>
+
+            <td>
+                <button  v-on:click="onDelete($event, item)">Delete</button>
             </td>
         </tr>
     </table>
