--- a/src/components/fm-list/template.html
+++ b/src/components/fm-list/template.html
@@ -24,11 +24,13 @@
 
         <tr v-for="item in items" class="fm-list-body">
             <td v-for="(value, key) in item">
-                {{ value }}
+                {{ value | displayDate}}
             </td>
 
-            <td>
-                <button  v-on:click="onDelete($event, item)">Delete</button>
+            <td style="text-align: center">
+                <button  v-on:click="onDelete($event, item)">
+                    <icon name="remove"></icon>
+                </button>
             </td>
         </tr>
     </table>
