--- a/src/display/display-error/style.css
+++ b/src/display/display-error/style.css
@@ -1,7 +1,15 @@
+/**
+ * Created by:  Dinca Roberto
+ * On:          29/03/17
+ * For project: File-Manager
+ * Description:
+ */
+
 
 .critical{
   color:red;
 }
+
 
 .information{
   color:blue;
